--- a/_pages/about.html
+++ b/_pages/about.html
@@ -47,8 +47,7 @@ layout_type: snap
   <canvas id="spiral-canvas" class="absolute inset-0 w-full h-full -z-10"></canvas>
   <h1 class="text-6xl font-bold text-white mb-6 relative z-10">About Us</h1>
   <p class="text-2xl text-gray-200 mb-12 max-w-4xl leading-relaxed relative z-10">
-    We build what you need. Top class industry ready products that transform your vision into reality. 
-    Our team combines cutting-edge technology with innovative design to deliver solutions that exceed expectations.
+    NishCorp Technologies is redefining mobility with robotics designed by those who understand it best. Founded by Siddhant Singh, a wheelchair user and engineer, we’re building India’s first stair-climbing, restroom-ready robotic wheelchair—because independence shouldn’t have limits.
   </p>
 </section>
 
@@ -57,45 +56,46 @@ layout_type: snap
     <div class="max-w-6xl mx-auto">
         <h2 class="text-4xl font-bold text-white mb-8">Our Story & Vision</h2>
         <p class="text-lg text-gray-300 leading-relaxed">
-            Founded with a mission to bridge the gap between imagination and implementation, NishCorp has grown from a small startup to a leading technology solutions provider. We believe that every great idea deserves to be brought to life with precision, creativity, and unwavering attention to detail. Our journey began with a simple philosophy: understand what our clients truly need, then exceed those expectations through innovative engineering and thoughtful design.
+            NishCorp Technologies began with a deeply personal mission. Our founder, Siddhant Singh, a mechanical engineer from VJTI and a wheelchair user, grew up alongside his late brother Nishchay, who lived with muscular dystrophy. Watching Nishchay face the constant barriers of stairs, inaccessible restrooms, and dependent mobility sparked a question: what if robotics could make these obstacles disappear?
             <br><br>
-            Over the years, we've assembled a diverse team of experts who share our passion for excellence. From software architects and UX designers to project managers and quality assurance specialists, each member of our team brings unique skills and perspectives that contribute to our collective success. We don't just build products; we craft experiences that resonate with users and drive business growth.
+            In Nishchay’s memory, Siddhant set out to build more than just a wheelchair. He envisioned a robotic mobility solution that wouldn’t need help, transfers, or compromises—a device that could climb stairs, navigate rough terrain, and dock directly to restrooms, all while staying compact and car-friendly. What started as a passion project in a small lab is now on the verge of becoming India’s first stair-climbing, restroom-accessible robotic wheelchair.
             <br><br>
-            Our approach is collaborative and transparent. We work closely with our clients throughout every phase of development, ensuring that their vision remains at the forefront of everything we create. Whether you're a startup looking to disrupt an industry or an established enterprise seeking digital transformation, we have the expertise and dedication to make your project a success. We pride ourselves on delivering not just functional solutions, but products that are scalable, maintainable, and built to last.
+            But our vision reaches beyond assistive mobility. At the heart of our wheelchair is a modular robotic base—a platform versatile enough to power delivery bots, defense rovers, and smart industrial carts. By building a system that adapts to multiple industries, we’re creating a robotics ecosystem where accessibility meets automation.
             <br><br>
-            Looking forward, we're excited about the emerging technologies that will shape the future of digital experiences. From artificial intelligence and machine learning to blockchain and IoT, we're constantly exploring new frontiers and incorporating cutting-edge innovations into our work. Our commitment to continuous learning and adaptation ensures that we're always ready to tackle the challenges of tomorrow while delivering exceptional results today.
+            Our goal is simple but ambitious: to make mobility limitless and to build the world’s most inclusive robotics platform. We believe independence isn’t a privilege—it’s a right. Through a blend of human-first design, advanced robotics (ROS2, Jetson Nano), and a team driven by lived experience, we’re proving that technology can be both empowering and scalable.
+            <br><br>
+            At NishCorp, every prototype, every feature, and every idea is rooted in one belief: everyone deserves the freedom to move, live, and dream without barriers.
         </p>
     </div>
 </section>
 
-  <section id="features-why" class="snap-section bg-[#242424] text-white">
-    <div class="w-full px-8 md:px-20 lg:px-40">
-      <h2 class="text-4xl font-bold mb-8">Team</h2>
-      <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
-        <!-- Team Member 1 -->
-        <div class="bg-[#1a1a1a] rounded-2xl p-6 shadow-lg flex flex-col items-center text-center">
-          <img src="/assets/images/team1.jpg" alt="Team Member 1" class="w-32 h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
-          <h3 class="text-2xl font-semibold text-white">Person 1</h3>
-          <p class="text-gray-400">Description</p>
-        </div>
-
-        <!-- Team Member 2 -->
-        <div class="bg-[#1a1a1a] rounded-2xl p-6 shadow-lg flex flex-col items-center text-center">
-          <img src="/assets/images/team2.jpg" alt="Team Member 2" class="w-32 h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
-          <h3 class="text-2xl font-semibold text-white">Person 2</h3>
-          <p class="text-gray-400">Description</p>
-        </div>
-
-        <!-- Team Member 3 -->
-        <div class="bg-[#1a1a1a] rounded-2xl p-6 shadow-lg flex flex-col items-center text-center">
-          <img src="/assets/images/team3.jpg" alt="Team Member 3" class="w-32 h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
-          <h3 class="text-2xl font-semibold text-white">Person 3</h3>
-          <p class="text-gray-400">Description</p>
-        </div>
+<section id="features-why" class="snap-section bg-[#242424] text-white">
+  <div class="w-full px-8 md:px-20 lg:px-40">
+    <h2 class="text-4xl font-bold mb-8">Team</h2>
+    <p class="text-lg text-gray-300 leading-relaxed mb-6">Led by experience. Driven by empathy.</p>
+    <p class="text-lg text-gray-300 leading-relaxed mb-6">We’re a team of 9 young, multidisciplinary innovators—interns and engineers from mechanical, electrical, software, and business backgrounds—working hands-on from lab benches to test ramps.</p>
+    <p class="text-lg text-gray-300 leading-relaxed mb-6">We’re proudly bootstrapped, with incubation support and mentorship from IIT Bombay.</p>
+    <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
+      <div class="bg-[#1a1a1a] rounded-2xl p-6 shadow-lg flex flex-col items-center text-center">
+        <img src="/assets/images/team1.jpg" alt="Team Member 1" class="w-32 h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
+        <h3 class="text-2xl font-semibold text-white">Person 1</h3>
+        <p class="text-gray-400">Description</p>
       </div>
 
+      <div class="bg-[#1a1a1a] rounded-2xl p-6 shadow-lg flex flex-col items-center text-center">
+        <img src="/assets/images/team2.jpg" alt="Team Member 2" class="w-32 h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
+        <h3 class="text-2xl font-semibold text-white">Person 2</h3>
+        <p class="text-gray-400">Description</p>
+      </div>
+
+      <div class="bg-[#1a1a1a] rounded-2xl p-6 shadow-lg flex flex-col items-center text-center">
+        <img src="/assets/images/team3.jpg" alt="Team Member 3" class="w-32 h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
+        <h3 class="text-2xl font-semibold text-white">Person 3</h3>
+        <p class="text-gray-400">Description</p>
+      </div>
     </div>
-  </section>
+  </div>
+</section>
 
 <script src="/assets/js/spiral-galaxy.js"></script>
 </body>
