--- a/_pages/features.html
+++ b/_pages/features.html
@@ -37,7 +37,7 @@ spiral_galaxy: true
     <div class="relative z-10 flex flex-col items-center text-center px-4">
       <h1 class="text-6xl font-bold text-white mb-6">Features</h1>
       <p class="text-2xl text-gray-200 mb-12 max-w-4xl leading-relaxed">
-        Our product suite is designed to elevate your business with powerful, scalable, and elegant solutions.
+        Engineered for independence: a stair-climbing, terrain-tackling, restroom-ready robotic wheelchair powered by intelligent, foldable robotics.
       </p>
     </div>
   </section>
@@ -45,23 +45,28 @@ spiral_galaxy: true
 
 
   <!-- Section 2 -->
-  <section id="features-core" class="snap-section bg-[#1a1a1a] text-white">
-    <div class="w-full px-8 md:px-20 lg:px-40">
-      <h2 class="text-4xl font-bold mb-8">Core Capabilities</h2>
-      <ul class="text-lg text-gray-300 leading-relaxed list-disc pl-6 space-y-4 text-left">
-        <li>Gotta discuss</li>
-      </ul>
+<section id="features-core" class="snap-section bg-[#1a1a1a] text-white">
+    <div class="w-full px-10 md:px-20 lg:px-40">
+        <h2 class="text-6xl font-bold mb-8">Core Capabilities</h2>
+        <p class="text-lg text-gray-300 leading-relaxed mb-6">More than a wheelchair. A robust robotic system.</p>
+        <ul class="text-lg text-gray-300 leading-relaxed list-none pl-6 space-y-4">
+            <li>India’s first stair-climbing + restroom-accessible wheelchair</li>
+            <li>Traverses unstructured stairs and rough terrain</li>
+            <li>Four-legged motion system for dynamic balancing</li>
+            <li>Folds to fit in car trunks for on-the-go use</li>
+            <li>Powered by Jetson Nano + ROS2 for semi-autonomy</li>
+            <li>No human assistance required—for restroom, stairs, or cars</li>
+        </ul>
+        <p class="text-lg text-gray-300 leading-relaxed mt-6">Built by a team of passionate young engineers, our system blends cutting-edge AI, mobility mechanics, and human-first design.</p>
     </div>
-  </section>
+</section>
 
   <!-- Section 3--->
   <section id="features-why" class="snap-section bg-[#242424] text-white">
     <div class="w-full px-8 md:px-20 lg:px-40">
-      <h2 class="text-4xl font-bold mb-8">Why Choose Us</h2>
+      <h2 class="text-6xl font-bold mb-8">Why Choose Us</h2>
       <p class="text-lg text-gray-300 leading-relaxed">
-        At NishCorp, innovation and execution go hand-in-hand. We don't just provide features — we solve real problems.
-        With a customer-first mindset and deep technical expertise, our solutions are crafted to scale, adapt, and lead.
-        Join the growing list of clients who trust us to transform their ideas into market-leading platforms.
+        At NishCorp Technologies, we don’t just build wheelchairs—we build freedom. Our solutions are born from real-world experience, crafted by a founder who understands the daily barriers of mobility firsthand. Unlike conventional mobility aids, our robotic wheelchair is designed to conquer stairs, rough terrain, and restroom access—all without assistance. Backed by cutting-edge robotics (ROS2, Jetson Nano) and a versatile modular platform, we’re not only redefining accessibility, but also creating a foundation for delivery, defense, and industrial automation. When you choose NishCorp, you’re choosing innovation with heart—technology built for people, by people who truly understand.
       </p>
     </div>
   </section>
