--- a/_pages/features.html
+++ b/_pages/features.html
@@ -6,71 +6,53 @@ permalink: /features/
 spiral_galaxy: true
 ---
 
-<style>
-  .snap-container {
-    scroll-snap-type: y proximity;
-    height: 100vh;
-    overflow-y: auto;
-    scroll-behavior: smooth;
-  }
-  .snap-section {
-    scroll-snap-align: start;
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    padding: 2rem;
-    box-sizing: border-box;
-  }
-</style>
 <body>
 <div class="snap-container">
-  <!-- Section 1 --->
+  <!-- Section 1 -->
   <section id="features-intro" class="snap-section relative text-white overflow-hidden">
     <!-- Spiral Galaxy Canvas Background -->
     <canvas id="spiral-canvas" class="absolute inset-0 w-full h-full -z-10"></canvas>
 
     <!-- Foreground Content -->
     <div class="relative z-10 flex flex-col items-center text-center px-4">
-      <h1 class="text-6xl font-bold text-white mb-6">Features</h1>
-      <p class="text-2xl text-gray-200 mb-12 max-w-4xl leading-relaxed">
+      <h1 class="font-bold text-white mb-6">Features</h1>
+      <p class="text-gray-200 mb-12 max-w-4xl leading-relaxed">
         Engineered for independence: a stair-climbing, terrain-tackling, restroom-ready robotic wheelchair powered by intelligent, foldable robotics.
       </p>
     </div>
   </section>
 
-
-
-  <!-- Section 2 -->
-<section id="features-core" class="snap-section bg-[#1a1a1a] text-white">
-    <div class="w-full px-10 md:px-20 lg:px-40">
-        <h2 class="text-6xl font-bold mb-8">Core Capabilities</h2>
-        <p class="text-lg text-gray-300 leading-relaxed mb-6">More than a wheelchair. A robust robotic system.</p>
-        <ul class="text-lg text-gray-300 leading-relaxed list-none pl-6 space-y-4">
-            <li>India’s first stair-climbing + restroom-accessible wheelchair</li>
-            <li>Traverses unstructured stairs and rough terrain</li>
-            <li>Four-legged motion system for dynamic balancing</li>
-            <li>Folds to fit in car trunks for on-the-go use</li>
-            <li>Powered by Jetson Nano + ROS2 for semi-autonomy</li>
-            <li>No human assistance required—for restroom, stairs, or cars</li>
-        </ul>
-        <p class="text-lg text-gray-300 leading-relaxed mt-6">Built by a team of passionate young engineers, our system blends cutting-edge AI, mobility mechanics, and human-first design.</p>
-    </div>
-</section>
-
-  <!-- Section 3--->
-  <section id="features-why" class="snap-section bg-[#242424] text-white">
-    <div class="w-full px-8 md:px-20 lg:px-40">
-      <h2 class="text-6xl font-bold mb-8">Why Choose Us</h2>
-      <p class="text-lg text-gray-300 leading-relaxed">
-        At NishCorp Technologies, we don’t just build wheelchairs—we build freedom. Our solutions are born from real-world experience, crafted by a founder who understands the daily barriers of mobility firsthand. Unlike conventional mobility aids, our robotic wheelchair is designed to conquer stairs, rough terrain, and restroom access—all without assistance. Backed by cutting-edge robotics (ROS2, Jetson Nano) and a versatile modular platform, we’re not only redefining accessibility, but also creating a foundation for delivery, defense, and industrial automation. When you choose NishCorp, you’re choosing innovation with heart—technology built for people, by people who truly understand.
+  <!-- Section 2 (Core Capabilities, grows if needed) -->
+  <section id="features-core" class="snap-section grow-section bg-[#1a1a1a] text-white">
+    <div class="w-full px-6 sm:px-10 md:px-20 lg:px-40">
+      <h2 class="font-bold">Core Capabilities</h2>
+      <p class="text-gray-300 leading-relaxed mb-6">
+        More than a wheelchair. A robust robotic system.
+      </p>
+      <ul class="text-gray-300 leading-relaxed space-y-4">
+        <li>India’s first stair-climbing + restroom-accessible wheelchair</li>
+        <li>Traverses unstructured stairs and rough terrain</li>
+        <li>Four-legged motion system for dynamic balancing</li>
+        <li>Folds to fit in car trunks for on-the-go use</li>
+        <li>Powered by Jetson Nano + ROS2 for semi-autonomy</li>
+        <li>No human assistance required—for restroom, stairs, or cars</li>
+      </ul>
+      <p class="text-gray-300 leading-relaxed mt-6">
+        Built by a team of passionate young engineers, our system blends cutting-edge AI, mobility mechanics, and human-first design.
       </p>
     </div>
   </section>
 
+  <!-- Section 3 (Why Choose Us, grows if needed) -->
+  <section id="features-why" class="snap-section grow-section bg-[#242424] text-white">
+    <div class="w-full px-6 sm:px-10 md:px-20 lg:px-40">
+      <h2 class="font-bold">Why Choose Us</h2>
+      <p class="text-gray-300 leading-relaxed">
+        At NishCorp Technologies, we don’t just build wheelchairs—we build freedom. Our solutions are born from real-world experience, crafted by a founder who understands the daily barriers of mobility firsthand. Unlike conventional mobility aids, our robotic wheelchair is designed to conquer stairs, rough terrain, and restroom access—all without assistance. Backed by cutting-edge robotics (ROS2, Jetson Nano) and a versatile modular platform, we’re not only redefining accessibility, but also creating a foundation for delivery, defense, and industrial automation. When you choose NishCorp, you’re choosing innovation with heart—technology built for people, by people who truly understand.
+      </p>
+    </div>
+  </section>
 </div>
+
 <script src="/assets/js/spiral-galaxy.js"></script>
 </body>
