Almost Final changes to website

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -103,53 +103,77 @@ layout_type: snap
     </p>
     <p class="text-gray-300 leading-relaxed text-center mb-4"
        style="font-size: clamp(0.9rem, 2.5vw, 1.2rem);">
-      We’re a team of 9 young, multidisciplinary innovators—interns and engineers from mechanical, electrical, software, and business backgrounds—working hands-on from lab benches to test ramps.
+      We’re a team of 8 young, multidisciplinary innovators—interns and engineers from mechanical, electrical, software, and business backgrounds—working hands-on from lab benches to test ramps.
     </p>
     <p class="text-gray-300 leading-relaxed text-center mb-8"
        style="font-size: clamp(0.9rem, 2.5vw, 1.2rem);">
       We’re proudly bootstrapped, with incubation support and mentorship from IIT Bombay.
     </p>
 
-    <div class="grid gap-6 sm:gap-8 sm:grid-cols-2 lg:grid-cols-3">
-      <!-- Card 1 -->
-      <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
-        <img src="/assets/images/team1.jpg" alt="Team Member 1" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
-        <h3 class="text-white font-semibold"
-            style="font-size: clamp(1rem, 3vw, 1.5rem);">
-          Person 1
-        </h3>
-        <p class="text-gray-400"
-           style="font-size: clamp(0.8rem, 2vw, 1rem);">
-          Description
-        </p>
-      </div>
+    <div class="grid gap-6 sm:gap-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+  <!-- Card 1 -->
+  <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
+    <img src="/assets/images/Siddhant.png" alt="Siddhant" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
+    <h3 class="text-white font-semibold">Siddhant Singh</h3>
+    <p class="text-gray-400">Founder & Team Lead/Robotics Control Engineer</p>
+  </div>
 
-      <!-- Card 2 -->
-      <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
-        <img src="/assets/images/team2.jpg" alt="Team Member 2" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
-        <h3 class="text-white font-semibold"
-            style="font-size: clamp(1rem, 3vw, 1.5rem);">
-          Person 2
-        </h3>
-        <p class="text-gray-400"
-           style="font-size: clamp(0.8rem, 2vw, 1rem);">
-          Description
-        </p>
-      </div>
+  <!-- Card 2 -->
+  <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
+    <img src="/assets/images/Arham.png" alt="Arham" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
+    <h3 class="text-white font-semibold">Arham Ajay Shah</h3>
+    <p class="text-gray-400">Robotic Mechanical Engineer</p>
+  </div>
 
-      <!-- Card 3 -->
-      <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
-        <img src="/assets/images/team3.jpg" alt="Team Member 3" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
-        <h3 class="text-white font-semibold"
-            style="font-size: clamp(1rem, 3vw, 1.5rem);">
-          Person 3
-        </h3>
-        <p class="text-gray-400"
-           style="font-size: clamp(0.8rem, 2vw, 1rem);">
-          Description
-        </p>
-      </div>
-    </div>
+  <!-- Card 3 -->
+  <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
+    <img src="/assets/images/Mahesh.png" alt="Mahesh" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
+    <h3 class="text-white font-semibold">Mahesh S Khade</h3>
+    <p class="text-gray-400">Robotic Mechanical Engineer</p>
+  </div>
+
+  <!-- Card 4 -->
+  <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
+    <img src="/assets/images/Omkar.png" alt="Omkar" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
+    <h3 class="text-white font-semibold">Omkar Salunkhe</h3>
+    <p class="text-gray-400">Robotic Mechanical Engineer</p>
+  </div>
+
+  <!-- Card 5 -->
+  <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
+    <img src="/assets/images/Harsh.png" alt="Harsh" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
+    <h3 class="text-white font-semibold">Harsh Pawar</h3>
+    <p class="text-gray-400">Robotic Mechanical Engineer</p>
+  </div>
+
+  <!-- Card 6 -->
+  <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
+    <a href="https://noobmaster-version.github.io/spongefal/" target="_blank" rel="noopener noreferrer">
+      <img src="/assets/images/Kartikey.jpeg" alt="Pathak" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
+    </a>
+    <h3 class="text-white font-semibold">Kartikey Pathak</h3>
+    <p class="text-gray-400">Same as Sujal</p>
+  </div>
+
+  <!-- Card 7 -->
+  <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
+    <a href="https://5usu.github.io" target="_blank" rel="noopener noreferrer">
+      <img src="/assets/images/Sujal.jpeg" alt="Sujji" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
+    </a>
+    <h3 class="text-white font-semibold">Sujal Dwivedi</h3>
+    <p class="text-gray-400">Same as Kartikey</p>
+  </div>
+
+
+  <!-- Card 8 -->
+  <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
+    <a href="https://ilegend509.me" target="_blank" rel="noopener noreferrer">
+      <img src="/assets/images/Suchit.jpeg" alt="ilegend.509" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
+    </a>
+    <h3 class="text-white font-semibold">Suchit Garad</h3>
+    <p class="text-gray-400">Technical Product Intern</p>
+  </div>
+</div>
   </div>
 </section>
 
