Final Changes done

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -122,28 +122,28 @@ layout_type: snap
   <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
     <img src="/assets/images/Arham.png" alt="Arham" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
     <h3 class="text-white font-semibold">Arham Ajay Shah</h3>
-    <p class="text-gray-400">Robotic Mechanical Engineer</p>
+    <p class="text-gray-400">Robotics Mechanical Engineer</p>
   </div>
 
   <!-- Card 3 -->
   <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
     <img src="/assets/images/Mahesh.png" alt="Mahesh" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
     <h3 class="text-white font-semibold">Mahesh S Khade</h3>
-    <p class="text-gray-400">Robotic Mechanical Engineer</p>
+    <p class="text-gray-400">Robotics Mechanical Engineer</p>
   </div>
 
   <!-- Card 4 -->
   <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
     <img src="/assets/images/Omkar.png" alt="Omkar" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
     <h3 class="text-white font-semibold">Omkar Salunkhe</h3>
-    <p class="text-gray-400">Robotic Mechanical Engineer</p>
+    <p class="text-gray-400">Robotics Mechanical Engineer</p>
   </div>
 
   <!-- Card 5 -->
   <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
     <img src="/assets/images/Harsh.png" alt="Harsh" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
     <h3 class="text-white font-semibold">Harsh Pawar</h3>
-    <p class="text-gray-400">Robotic Mechanical Engineer</p>
+    <p class="text-gray-400">Robotics Mechanical Engineer</p>
   </div>
 
   <!-- Card 6 -->
@@ -152,7 +152,7 @@ layout_type: snap
       <img src="/assets/images/Kartikey.jpeg" alt="Pathak" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
     </a>
     <h3 class="text-white font-semibold">Kartikey Pathak</h3>
-    <p class="text-gray-400">Same as Sujal</p>
+    <p class="text-gray-400">Robotics Control Engineer</p>
   </div>
 
   <!-- Card 7 -->
@@ -161,9 +161,8 @@ layout_type: snap
       <img src="/assets/images/Sujal.jpeg" alt="Sujji" class="w-24 h-24 sm:w-28 sm:h-28 lg:w-32 lg:h-32 object-cover rounded-full mb-4 border-4 border-gray-700">
     </a>
     <h3 class="text-white font-semibold">Sujal Dwivedi</h3>
-    <p class="text-gray-400">Same as Kartikey</p>
+    <p class="text-gray-400">Robotics Control Engineer</p>
   </div>
-
 
   <!-- Card 8 -->
   <div class="bg-[#1a1a1a] rounded-2xl p-4 sm:p-6 shadow-lg flex flex-col items-center text-center">
